--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/goldbach">View on GitHub</a>
 
-          <h1 id="project_title">goldbach.github.io</h1>
-          <h2 id="project_tagline">Pages</h2>
+          <h1 id="project_title">goldbach.github.io: Welcome</h1>
+          <h2 id="project_tagline">Craft beer, Tech and Politics. In that order</h2>
 
         </header>
     </div>
